Sync all content

--- a/content/resources/wgs-615f12.md
+++ b/content/resources/wgs-615f12.md
@@ -4,7 +4,7 @@ description: 'The London Feminist Network is a women-only feminist networking an
   campaigning organization based in the UK. Founded in 2004, their mission is to unite
   London-based feminist groups and individuals in action. Image courtesy of Mike Atherton
   on Flickr. Available CC BY-NC-SA. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/wgs-615-feminist-inquiry-strategies-for-effective-scholarship-fall-2012/c46db57c96993827ec0c6590087f8ace_WGS-615f12.jpg
+file: /media/courses/wgs-615-feminist-inquiry-strategies-for-effective-scholarship-fall-2012/c46db57c96993827ec0c6590087f8ace_WGS-615f12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The London Feminist Network is a women-only feminist networking and campaigning
@@ -14,6 +14,8 @@ image_metadata:
   credit: Image courtesy of Mike Atherton on Flickr. Available CC BY-NC-SA.
   image-alt: A woman holds a huge purple banner with the words London Feminist Network
     written on it.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: London Feminist Network
 uid: c46db57c-9699-3827-ec0c-6590087f8ace
