--- a/content/resources/wgs-615f12.md
+++ b/content/resources/wgs-615f12.md
@@ -4,7 +4,7 @@ description: 'The London Feminist Network is a women-only feminist networking an
   campaigning organization based in the UK. Founded in 2004, their mission is to unite
   London-based feminist groups and individuals in action. Image courtesy of Mike Atherton
   on Flickr. Available CC BY-NC-SA. '
-file: /media/courses/wgs-615-feminist-inquiry-strategies-for-effective-scholarship-fall-2012/c46db57c96993827ec0c6590087f8ace_WGS-615f12.jpg
+file: /courses/wgs-615-feminist-inquiry-strategies-for-effective-scholarship-fall-2012/c46db57c96993827ec0c6590087f8ace_WGS-615f12.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The London Feminist Network is a women-only feminist networking and campaigning
@@ -20,3 +20,5 @@ resourcetype: Image
 title: London Feminist Network
 uid: c46db57c-9699-3827-ec0c-6590087f8ace
 ---
+The London Feminist Network is a women-only feminist networking and campaigning organization based in the UK. Founded in 2004, their mission is to unite London-based feminist groups and individuals in action. Image courtesy of Mike Atherton on Flickr. Available CC BY-NC-SA. 
+
