Sync all content

--- a/content/resources/wgs-615f12.md
+++ b/content/resources/wgs-615f12.md
@@ -15,10 +15,10 @@ image_metadata:
   image-alt: A woman holds a huge purple banner with the words London Feminist Network
     written on it.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: London Feminist Network
 uid: c46db57c-9699-3827-ec0c-6590087f8ace
 ---
 The London Feminist Network is a women-only feminist networking and campaigning organization based in the UK. Founded in 2004, their mission is to unite London-based feminist groups and individuals in action. Image courtesy of Mike Atherton on Flickr. Available CC BY-NC-SA. 
-
